2008-02-18  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/verilog-mode.el (customize): Fix typo in error message.
	(verilog-mode, verilog-mode-indent, verilog-mode-actions)
	(verilog-mode-auto, verilog-indent-level-module)
	(verilog-minimum-comment-distance, verilog-library-flags)
	(verilog-library-directories, verilog-library-files)
	(verilog-auto-reset-widths, verilog-imenu-generic-expression)
	(verilog-xemacs-menu, verilog-set-compile-command)
	(verilog-set-compile-command, verilog-mode-syntax-table, verilog-mode)
	(verilog-get-expr, verilog-strip-comments, verilog-one-line)
	(verilog-lint-off, verilog-batch-auto, verilog-batch-delete-auto)
	(verilog-batch-inject-auto, verilog-batch-indent)
	(verilog-continued-line, verilog-type-keywords)
	(verilog-read-sub-decls-sig, verilog-read-sub-decls-line)
	(verilog-read-inst-pins, verilog-read-arg-pins)
	(verilog-read-auto-template, verilog-read-signals, verilog-getopt-file)
	(verilog-add-list-unique, verilog-symbol-detick, verilog-modi-filename)
	(verilog-auto-star, verilog-auto-inst, verilog-auto-wire)
	(verilog-enum-ascii, verilog-sk-begin, verilog-sk-fork)
	(verilog-sk-datadef, verilog-colorize-include-files-buffer)
	(verilog-mode-version, verilog-mode-release-date)
	(verilog-mode-release-emacs, verilog-linter, verilog-coverage)
	(verilog-simulator, verilog-compiler)
	(verilog-auto-sense-defines-constant, verilog-company)
	(verilog-project, verilog-mark-defun, verilog-submit-bug-report):
	Fix typos in docstrings.
	(verilog-set-auto-endcomments, verilog-calculate-indent)
	(verilog-inject-auto, verilog-auto-arg, verilog-auto-inout-module):
	Reflow docstrings.
	(verilog-tab-always-indent, verilog-highlight-p1800-keywords)
	(verilog-auto-star-save, verilog-auto-inst-vector, verilog-mode-hook)
	(electric-verilog-forward-sexp, verilog-in-case-region-p)
	(verilog-in-struct-region-p, verilog-in-generate-region-p)
	(verilog-leap-to-head, verilog-current-indent-level)
	(verilog-case-indent-level, verilog-cpp-keywords)