@@ -1,3 +1,7 @@
+2008-02-18  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-status-mode-menu): New menu for vc-status.
+
 2008-02-18  Juanma Barranquero  <lekktu@gmail.com>
 
 	* progmodes/verilog-mode.el (customize): Fix typo in error message.
